--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ h1 {
     margin-top: 20px;
 }
 
+button {
+    background-color: magenta;
+    height: 40px;
+}
+
 .container {
     background-color: grey;
     margin: auto;
@@ -29,28 +34,36 @@ h1 {
 
 .green {
     background-color: green;
-    height: 200px;
-    width: 200px;
+    height: 215px;
+    width: 215px;
     border-radius: 100% 0 0 0;
 }
 
 .red {
     background-color: red;
-    height: 200px;
-    width: 200px;
+    height: 215px;
+    width: 215px;
     border-radius: 0 100% 0 0;
 }
 
 .yellow {
     background-color: yellow;
-    height: 200px;
-    width: 200px;
+    height: 215px;
+    width: 215px;
     border-radius: 0 0 0 100%;
 }
 
 .blue {
     background-color: blue;
-    height: 200px;
-    width: 200px;
+    height: 215px;
+    width: 215px;
     border-radius: 0 0 100% 0;
+}
+
+h2 {
+    text-align: center;
+    border: solid 1px black;
+    height: 40px;
+    width: 250px;
+    margin: 30px auto;
 }
