--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@ button {
 }
 
 .container {
-    background-color: grey;
+    /* background-color: grey; */
     margin: auto;
-    border: 2px solid black;
+    /* border: 2px solid black; */
+    position: relative;
     height: 500px;
     width: 500px;
     display: grid;
@@ -30,7 +31,13 @@ button {
 .box {
     border: 2px solid black;
     margin: 0 auto;
+    cursor: pointer;
 }
+
+.box:hover {
+    border-color: lightblue;
+}
+
 
 .green {
     background-color: green;
