--- a/style.css
+++ b/style.css
@@ -13,9 +13,10 @@ body {
 
 button {
     background-color: magenta;
-    height: 40px;
+    height: 60px;
     margin: 30px;
     margin-top: 5px;
+    font-weight: 700;
 }
 
 .container {
