--- a/style.css
+++ b/style.css
@@ -13,10 +13,12 @@ body {
 
 button {
     background-color: magenta;
+    border: 1px solid black;
     height: 60px;
     margin: 30px;
     margin-top: 5px;
-    font-weight: 700;
+    font-weight: 900;
+    cursor: pointer;
 }
 
 .container {
